# mlnx

./: .gitignore  CMakeLists.txt  Cargo.toml  default.nix  iree.nix  llvm.nix  main.cpp  pytorch.nix  readme.md  shell.nix  torch-mlir.nix
src/compiler/: Cargo.toml  main.rs
src/melior/: Cargo.toml  LICENSE  README.md  build.rs
src/melior/src/: context.rs  dialect.rs  error.rs  execution_engine.rs  lib.rs  logical_result.rs  pass.rs  string_ref.rs  utility.rs
src/melior/src/dialect/: registry.rs
src/melior/src/dialect/llvm/: type.rs
src/melior/src/ir/: affine_map.rs  attribute.rs  block.rs  identifier.rs  location.rs  module.rs  named_attribute.rs  operation.rs  region.rs  type.rs  value.rs
src/melior/src/ir/block/: argument.rs
src/melior/src/ir/operation/: builder.rs  result.rs
src/melior/src/ir/type/: function.rs  mem_ref.rs  tuple.rs
src/melior/src/ir/type/id/: allocator.rs
src/melior/src/pass/: conversion.rs  manager.rs  operation_manager.rs  transform.rs
src/test/: gpu.nix
