[package]
name = "theos_melior"
description = "The rustic MLIR bindings in Rust."
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://codeberg.org/theos/melior"

[features]

[dependencies]
itertools = "0.10"
dashmap = "5.4"
once_cell = "1"

[dev-dependencies]
indoc = "2.0"
insta = "1.28"
pretty_assertions = "1.3"

[build-dependencies]
bindgen = "0.65"
anyhow = "1.0"
